--- a/ManagerSpending/ManagerSpending/Views/LoginView.xaml
+++ b/ManagerSpending/ManagerSpending/Views/LoginView.xaml
@@ -6,9 +6,9 @@
              IsBusy="{Binding IsBusy}">
     
     <ContentPage.Content>
-        <StackLayout Margin="20, 100, 20, 0"
+        <StackLayout Margin="20, 0, 20, 0"
                      VerticalOptions="End">
-            <StackLayout Margin="0, 0, 0, 70">
+            <StackLayout Margin="0, 0, 0, 40">
                 <Image  Source="xamarinlogo.png"
                         Aspect="AspectFit"/>
                 <Entry  Placeholder="Email..."
@@ -31,6 +31,29 @@
                         Margin="10"
                        />
             </StackLayout>
+            <StackLayout HeightRequest="40">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <ImageButton BackgroundColor="AliceBlue"
+                           Source="fblogo.png"
+                           Grid.Column="1"
+                           Grid.Row="0"/>
+                    <ImageButton BackgroundColor="AliceBlue"
+                           Source="glogo.png"
+                           Grid.Column="2"
+                           Grid.Row="0"/>
+                </Grid>
+            </StackLayout>
+            
             <Label 
                     TextColor="Black"
                     Margin="0, 0, 0, 5"
