- Make animation splash screen appearing

--- a/ManagerSpending/ManagerSpending/App.xaml
+++ b/ManagerSpending/ManagerSpending/App.xaml
@@ -4,5 +4,8 @@
              x:Class="ManagerSpending.App">
     <Application.Resources>
 
+        <ResourceDictionary>
+            <Color x:Key="Primary">#8ec6fb</Color>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
