--- a/ManagerSpending/ManagerSpending/Views/LoginView.xaml
+++ b/ManagerSpending/ManagerSpending/Views/LoginView.xaml
@@ -6,59 +6,77 @@
              IsBusy="{Binding IsBusy}">
     
     <ContentPage.Content>
-        <StackLayout Margin="20, 0, 20, 0"
-                     VerticalOptions="End">
-            <StackLayout Margin="0, 0, 0, 40">
-                <Image  Source="xamarinlogo.png"
-                        Aspect="AspectFit"/>
-                <Entry  Placeholder="Email..."
-                        Text="{Binding Email}"/>
-                <Entry  Placeholder="Password..."
-                        IsPassword="True"
-                        Text="{Binding Password}"/>
-                <Button 
-                        BackgroundColor="#3087d9"
-                        BorderRadius="20"
-                        Text="Login"
-                        TextColor="White"
-                        Command="{Binding LoginCommand}"/>
-                <ActivityIndicator 
-                        IsRunning="{Binding IsBusy}"
-                        IsVisible="{Binding IsBusy}"
-                        WidthRequest="30"
-                        HeightRequest="30"
-                        HorizontalOptions="Center"
-                        Margin="10"
-                       />
-            </StackLayout>
-            <StackLayout HeightRequest="40">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="40"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition Width="40"/>
-                        <ColumnDefinition Width="40"/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
+        <Grid>
+            <StackLayout Margin="20, 0, 20, 0"
+                         VerticalOptions="End">
+                <StackLayout Margin="0, 0, 0, 40">
+                    <Image  Source="xamarinlogo.png"
+                            Aspect="AspectFit"/>
+                    <Entry  Placeholder="Email..."
+                            Text="{Binding Email}"/>
+                    <Entry  Placeholder="Password..."
+                            IsPassword="True"
+                            Text="{Binding Password}"/>
+                    <Button 
+                            BackgroundColor="#3087d9"
+                            BorderRadius="20"
+                            Text="Login"
+                            TextColor="White"
+                            Command="{Binding LoginCommand}"/>
+                    <ActivityIndicator 
+                            IsRunning="{Binding IsBusy}"
+                            IsVisible="{Binding IsBusy}"
+                            WidthRequest="30"
+                            HeightRequest="30"
+                            HorizontalOptions="Center"
+                            Margin="10"
+                           />
+                </StackLayout>
+                <StackLayout HeightRequest="40">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
 
-                    <ImageButton BackgroundColor="AliceBlue"
-                           Source="fblogo.png"
-                           Grid.Column="1"
-                           Grid.Row="0"/>
-                    <ImageButton BackgroundColor="AliceBlue"
-                           Source="glogo.png"
-                           Grid.Column="2"
-                           Grid.Row="0"/>
-                </Grid>
-            </StackLayout>
+                        <ImageButton BackgroundColor="AliceBlue"
+                               Source="fblogo.png"
+                               Aspect="AspectFit"
+                               Grid.Column="1"
+                               Grid.Row="0"/>
+                        <ImageButton BackgroundColor="AliceBlue"
+                               Source="glogo.png"
+                               Grid.Column="2"
+                               Grid.Row="0"/>
+                    </Grid>
+                </StackLayout>
             
-            <Label 
-                    TextColor="Black"
-                    Margin="0, 0, 0, 5"
-                    HorizontalOptions="Center"                
-                    Text="Design by Xamarin.Form"/>
-        </StackLayout>
+                <Label 
+                        TextColor="Black"
+                        Margin="0, 0, 0, 5"
+                        HorizontalOptions="Center"               
+                        FontSize="10.0"
+                        Text="Design by Xamarin.Form"/>
+            </StackLayout>
+            <Grid  x:Name="SplashGrid"
+                   BackgroundColor="{StaticResource Primary}">
+                <Image Source="logo"
+                       HorizontalOptions="Center"
+                       x:Name="logo"
+                       VerticalOptions="Center">
+                    <Image.TranslationY>
+                        <OnPlatform x:TypeArguments="x:Double">
+                            <On Platform="iOS"> 0 </On>
+                            <On Platform="Android"> -12 </On>
+                        </OnPlatform>
+                    </Image.TranslationY>
+                </Image>
+            </Grid>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
