--- a/ManagerSpending/ManagerSpending/Views/LoginView.xaml
+++ b/ManagerSpending/ManagerSpending/Views/LoginView.xaml
@@ -7,17 +7,38 @@
     
     <ContentPage.Content>
         <Grid>
-            <StackLayout Margin="20, 0, 20, 0"
-                         VerticalOptions="End">
-                <StackLayout Margin="0, 0, 0, 40">
-                    <Image  Source="xamarinlogo.png"
-                            Aspect="AspectFit"/>
-                    <Entry  Placeholder="Email..."
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="6*"/>
+                    <RowDefinition Height="3*"
+                                   />
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <Image  Source="xamarinlogo.png"
+                        Aspect="AspectFit"
+                        WidthRequest="200"
+                        HeightRequest="200"
+                        HorizontalOptions="Center"
+                        VerticalOptions="Center"
+                        Grid.Row="0"/>
+
+                <StackLayout Margin="20, 0, 20, 0"
+                             Grid.Row="1"
+                             VerticalOptions="Center">
+                    <Entry  x:Name="emailEntry"
+                            Completed="EmailEntry_Completed"
+                            Placeholder="Email..."
+                            Keyboard="Email"
                             Text="{Binding Email}"/>
-                    <Entry  Placeholder="Password..."
+                    <Entry  x:Name="passwordEntry"
+                            Placeholder="Password..."
                             IsPassword="True"
-                            Text="{Binding Password}"/>
-                    <Button 
+                            Text="{Binding Password}"
+                            Completed="PasswordEntry_Completed"/>
+                    <Button x:Name="btnLogin"
                             BackgroundColor="#3087d9"
                             BorderRadius="20"
                             Text="Login"
@@ -31,38 +52,46 @@
                             HorizontalOptions="Center"
                             Margin="10"
                            />
+                    
                 </StackLayout>
-                <StackLayout HeightRequest="40">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="40"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
 
-                        <ImageButton BackgroundColor="AliceBlue"
+                <StackLayout Margin="20, 0, 20, 0"
+                             VerticalOptions="End"
+                             Grid.Row="2">
+                    <StackLayout HeightRequest="40">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="40"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="40"/>
+                                <ColumnDefinition Width="40"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+
+                            <ImageButton BackgroundColor="AliceBlue"
                                Source="fblogo.png"
                                Aspect="AspectFit"
                                Grid.Column="1"
                                Grid.Row="0"/>
-                        <ImageButton BackgroundColor="AliceBlue"
+                            <ImageButton BackgroundColor="AliceBlue"
                                Source="glogo.png"
                                Grid.Column="2"
                                Grid.Row="0"/>
-                    </Grid>
-                </StackLayout>
-            
-                <Label 
+                        </Grid>
+                    </StackLayout>
+
+                    <Label 
                         TextColor="Black"
                         Margin="0, 0, 0, 5"
                         HorizontalOptions="Center"               
                         FontSize="10.0"
                         Text="Design by Xamarin.Form"/>
-            </StackLayout>
+                </StackLayout>
+
+            </Grid>
+            
             <Grid  x:Name="SplashGrid"
                    BackgroundColor="{StaticResource Primary}">
                 <Image Source="logo"
@@ -71,8 +100,8 @@
                        VerticalOptions="Center">
                     <Image.TranslationY>
                         <OnPlatform x:TypeArguments="x:Double">
-                            <On Platform="iOS"> 0 </On>
-                            <On Platform="Android"> -12 </On>
+                                <On Platform="Android" Value="-12"/>
+                                <On Platform="iOS" Value="0"/>
                         </OnPlatform>
                     </Image.TranslationY>
                 </Image>
