--- a/ManagerSpending/ManagerSpending/Views/MainPage.xaml
+++ b/ManagerSpending/ManagerSpending/Views/MainPage.xaml
@@ -1,19 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:ManagerSpending"
-             x:Class="ManagerSpending.MainPage">
+             x:Class="ManagerSpending.Views.MainPage"
+             NavigationPage.HasNavigationBar="False">
 
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" 
-           FontSize="Default"/>
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" 
-           FontSize="Small"/>
-    </StackLayout>
-
-</ContentPage>
+    <MasterDetailPage.Master>
+        <ContentPage Title="Menu">
+            <Grid BackgroundColor="Transparent">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="200" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid>
+                    <Image BackgroundColor="Aqua" Aspect="AspectFill" />
+                    <StackLayout Padding="0,20,0,0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                        <Image Source="xamarinlogo.png" Aspect="AspectFill" WidthRequest="85" HeightRequest="85" />
+                        <Label Text="Xam Buddy" TextColor="White" FontSize="Large" />
+                    </StackLayout>
+                </Grid>
+                <StackLayout  Grid.Row="1" Spacing="15">
+                    <ListView x:Name="navigationDrawerList" ItemsSource="{Binding masterItems}" RowHeight="60" SeparatorVisibility="None" BackgroundColor="#e8e8e8">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ImageCell ImageSource="{Binding Icon}"
+                                           Text="{Binding Title}"
+                                           TextColor="Black"/>
+                                <!--<ViewCell>
+                                    <StackLayout VerticalOptions="FillAndExpand" Orientation="Horizontal" Padding="20,10,0,10" Spacing="20">
+                                        <Image Source="{Binding Icon}"
+                                               WidthRequest="40"
+                                               HeightRequest="40"
+                                               VerticalOptions="Center" />
+                                        <Label Text="{Binding Title}"
+                                               FontSize="Small"
+                                               VerticalOptions="Center"
+                                               TextColor="Black"/>
+                                    </StackLayout>
+                                </ViewCell>-->
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackLayout>
+            </Grid>
+        </ContentPage>
+    </MasterDetailPage.Master>
+    <MasterDetailPage.Detail>
+        <NavigationPage>
+        </NavigationPage>
+    </MasterDetailPage.Detail>
+</MasterDetailPage>
