--- a/ManagerSpending/ManagerSpending/Views/LoginView.xaml
+++ b/ManagerSpending/ManagerSpending/Views/LoginView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ManagerSpending.Views.LoginView"
+             NavigationPage.HasNavigationBar="False"
              Title="{Binding Title}"
              IsBusy="{Binding IsBusy}">
     
